[gd_scene load_steps=4 format=3 uid="uid://b030adkqusqdt"]

[ext_resource type="Script" uid="uid://dd2qtl6vcsq10" path="res://cursor.gd" id="1_5l68f"]
[ext_resource type="Texture2D" uid="uid://dxfivjp63cu5f" path="res://Assets/vecteezy_realistic-magnifying-glass-clip-art_9876398.png" id="2_e4vdg"]

[sub_resource type="CircleShape2D" id="CircleShape2D_lgr22"]

[node name="Cursor" type="Node2D"]
z_index = 1
script = ExtResource("1_5l68f")

[node name="InteractionArea" type="Area2D" parent="."]
scale = Vector2(2.54363, 2.36)
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
shape = SubResource("CircleShape2D_lgr22")

[node name="Sprite2D" type="Sprite2D" parent="InteractionArea/CollisionShape2D"]
scale = Vector2(0.00786277, 0.00847456)
texture = ExtResource("2_e4vdg")

[node name="InteractionLabel" type="Label" parent="."]
offset_left = -48.0
offset_top = 10.0
offset_right = 59.0
offset_bottom = 59.0
text = "Thing Clicked!
"

[connection signal="area_entered" from="InteractionArea" to="." method="_on_interaction_area_area_entered"]
[connection signal="area_exited" from="InteractionArea" to="." method="_on_interaction_area_area_exited"]
